--- a/index.html
+++ b/index.html
@@ -469,16 +469,16 @@ https://www.iconfinder.com/korawan_m
   </div>
 
   <div class="aboutUs">
-    <div class="Help">
-    <a href="">About Us</a>
-    <a href="">News</a>
-    <a href="">Privacy Policy</a>
-    </div>
-    <div class="grandma">
+    <ul class="Help">
+      <a href="">About Us</a>
+      <a href="">News</a>
+      <a href="">Privacy Policy</a>
+    </ul>
+    <ul class="Help">
       <a href="">FAQs</a>
       <a href="">Contact Us</a>
       <a href="">T&C</a>
-    </div>
+    </ul>
     <div class="Social-media">
       <div class="website-logo">
         <h1 class="text-capitalize">
