--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 </head>
 
 <body>
+  <!-- ! cursor
+  <canvas id="myCanvas"></canvas>
+  <style>
+    #myCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  pointer-events: none; /* Allows clicks to pass through */
+}
+  </style> -->
+
   <!-- header -->
   <header>
     <!-- navbar  -->
@@ -604,6 +616,9 @@ https://www.iconfinder.com/korawan_m
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
   <script src="js/app.js"></script>
+  <!-- !cursor tail script -->
+  <script src="js/cursor-tail.js"></script>
+
 </body>
 
 </html>
