--- a/index.html
+++ b/index.html
@@ -13,25 +13,13 @@
   <link rel="stylesheet" href="css/all.css">
   <!-- about -->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="shortcut icon" type="cake-icon" href="img/logo.svg">
-  <title>Online Cake Shop</title>
+
+  <title>Cart Project</title>
   <style>
   </style>
 </head>
 
 <body>
-  <!-- ! cursor
-  <canvas id="myCanvas"></canvas>
-  <style>
-    #myCanvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  pointer-events: none; /* Allows clicks to pass through */
-}
-  </style> -->
-
   <!-- header -->
   <header>
     <!-- navbar  -->
@@ -616,9 +604,6 @@ https://www.iconfinder.com/korawan_m
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
   <script src="js/app.js"></script>
-  <!-- !cursor tail script -->
-  <script src="js/cursor-tail.js"></script>
-
 </body>
 
 </html>
